# trapit

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
tests/: test_init.py  test_tarpit.py  test_trapit.py
trapit/: __init__.py
