[project]
name = "trapit"
version = "0.0.6"
description = "Tracked Reprocessable Async/Parallel Iterator - parallel processing with LMDB tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmdb>=2.2.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=2.1.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.15",
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]
